--- a/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraCompany.cshtml
@@ -91,21 +91,35 @@
 
                                         @if (!String.IsNullOrEmpty(content?.IntroContentAgentEdHist?.ToString()))
                                         {
-                                            <div class="rich-text mb-5">
+                                            <div class="rich-text rich-text-inline mb-5">
                                                 @Html.Raw(content.IntroContentAgentEdHist)
                                             </div>
                                         }
 
                                         <div class="w-100 py-3 px-4 border border-medium rounded mb-3">
-                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
-                                            <select id="lorem" class="form-select">
+                                            @if (!String.IsNullOrEmpty(content?.IndividualAgent))
+                                            {
+                                                <h3 class="fs-lg fw-bold text-normal mb-3 pt-1">@content?.IndividualAgent</h3>
+                                            }
+                                            @if (!String.IsNullOrEmpty(content?.IndividualAgentDropdownLabel))
+                                            {
+                                                <label for="agentIndividual" class="mb-3">@content?.IndividualAgentDropdownLabel</label>
+                                            }
+                                            <select id="agentIndividual" class="form-select">
                                                 <option selected>Select a ...</option>
                                             </select>
                                         </div>
 
                                         <div class="w-100 py-3 px-4 border border-medium rounded mb-5">
-                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
-                                            <select id="lorem" class="form-select">
+                                            @if (!String.IsNullOrEmpty(content?.MultipleAgents))
+                                            {
+                                                <h3 class="fs-lg fw-bold text-normal mb-3 pt-1">@content?.MultipleAgents</h3>
+                                            }
+                                            @if (!String.IsNullOrEmpty(content?.MultipleAgentsDropdownLabel))
+                                            {
+                                                <label for="agentMultiple" class="mb-3">@content?.MultipleAgentsDropdownLabel</label>
+                                            }
+                                            <select id="agentMultiple" class="form-select">
                                                 <option selected>Select a ...</option>
                                             </select>
                                             <div class="form-check mt-2">
@@ -172,15 +186,29 @@
                                         }
 
                                         <div class="w-100 py-3 px-4 border border-medium rounded mb-3">
-                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
-                                            <select id="lorem" class="form-select">
+                                            @if (!String.IsNullOrEmpty(content?.EventStatusByAgentHeadline))
+                                            {
+                                                <h3 class="fs-lg fw-bold text-normal mb-3 pt-1">@content?.EventStatusByAgentHeadline</h3>
+                                            }
+                                            @if (!String.IsNullOrEmpty(content?.EventStatusByAgentLabel))
+                                            {
+                                                <label for="statusByAgent" class="mb-3">@content?.EventStatusByAgentLabel</label>
+                                            }
+                                            <select id="statusByAgent" class="form-select">
                                                 <option selected>Select a ...</option>
                                             </select>
                                         </div>
 
                                         <div class="w-100 py-3 px-4 border border-medium rounded mb-5">
-                                            <label for="lorem" class="mb-3">At eget vulputate sapien duis curabitur vulputate morbi feugiat euismod.</label>
-                                            <select id="lorem" class="form-select">
+                                            @if (!String.IsNullOrEmpty(content?.EventStatusByEventHeadline))
+                                            {
+                                                <h3 class="fs-lg fw-bold text-normal mb-3 pt-1">@content?.EventStatusByEventHeadline</h3>
+                                            }
+                                            @if (!String.IsNullOrEmpty(content?.EventStatusByEventLabel))
+                                            {
+                                                <label for="statusByEvent" class="mb-3">@content?.EventStatusByEventLabel</label>
+                                            }
+                                            <select id="statusByEvent" class="form-select">
                                                 <option selected>Select a ...</option>
                                             </select>
                                             <div class="mt-3">
@@ -189,6 +217,7 @@
                                                     Download CSV
                                                 </button>
                                             </div>
+
                                             <h3 class="p-2 d-block mt-4 mb-3" style="background-color: var(--bs-primary-bg-subtle)">Lorem Convention (00/0/0000)</h3>
                                             <div class="form-check mt-2">
                                                 <input id="download-csv" class="form-check-input" type="checkbox">
