Deployment 8770fae5-2ac4-4645-81ac-ed8ad6ae8897: Run number 986

--- a/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraDues.cshtml
@@ -81,7 +81,7 @@
                                     }
 
 
-                                    <h3 class="h5 mb-3">Payment Instructions</h3>
+                                    <h3 class="h5 mb-3 text-normal">Payment Instructions</h3>
 
                                     @for (var i = 1; i < 4; i++)
                                     {
@@ -111,7 +111,7 @@
                                     }
 
                                     
-                                    <h3 class="h5 my-3">@member.FirstName's Local Board Information</h3>
+                                    <h3 class="h5 my-3 text-normal">@member.FirstName's Local Board Information</h3>
                                     <div class="w-100 border border-medium rounded mb-5">
                                         <table class="table-info w-100 fs-sm">
                                             <thead class="visually-hidden">
