--- a/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
@@ -88,7 +88,7 @@
                                         {
                                             <input asp-for=@memberUpdateModel.MemberId type="hidden" />
 
-                                            <h3 class="h5 mb-2">Information</h3>
+                                            <h3 class="h5 mb-2 text-normal">Information</h3>
                                             <div class="w-100 border border-medium rounded mb-5">
                                                 <table class="table-info w-100 fs-sm">
                                                     <thead class="visually-hidden">
@@ -363,7 +363,7 @@
                                                 </table>
                                             </div>
 
-                                            <h3 class="h5 mb-2">Settings</h3>
+                                            <h3 class="h5 mb-2 text-normal">Settings</h3>
                                             <div class="w-100 border border-medium rounded mb-5">
                                                 <table class="table-info w-100 fs-sm">
                                                     <thead class="visually-hidden">
