--- a/src/WRA.Umbraco.Web/Views/mywraToolKit.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraToolKit.cshtml
@@ -33,13 +33,13 @@
                 <div class="border border-medium p-4 rounded mb-5">
                     @if (!String.IsNullOrEmpty(content.ZipFormHeadline.ToString()))
                     {
-                        <h4 class="h6 mb-4 fs-lg">
+                        <h4 class="h6 mb-4 fs-lg text-normal">
                             @Html.Raw(content.ZipFormHeadline)
                         </h4>
                     }
                     @if (!String.IsNullOrEmpty(content.ZipFormContent.ToString()))
                     {
-                        <div class="rich-text">
+                        <div class="rich-text mb-4">
                             @Html.Raw(content.ZipFormContent)
                         </div>
                     }
@@ -54,13 +54,13 @@
                 <div class="border border-medium p-4 rounded mb-5">
                     @if (!String.IsNullOrEmpty(content.FormsLibraryHeadline.ToString()))
                     {
-                        <h4 class="h6 mb-4 fs-lg">
+                        <h4 class="h6 mb-4 fs-lg text-normal">
                             @Html.Raw(content.FormsLibraryHeadline)
                         </h4>
                     }
                     @if (!String.IsNullOrEmpty(content.FormsLibraryContent.ToString()))
                     {
-                        <div class="rich-text">
+                        <div class="rich-text mb-4">
                             @Html.Raw(content.FormsLibraryContent)
                         </div>
                     }
@@ -75,13 +75,13 @@
                 <div class="border border-medium p-4 rounded mb-5">
                     @if (!String.IsNullOrEmpty(content.LineByLineHeadline.ToString()))
                     {
-                        <h4 class="h6 mb-4 fs-lg">
+                        <h4 class="h6 mb-4 fs-lg text-normal">
                             @Html.Raw(content.LineByLineHeadline)
                         </h4>
                     }
                     @if (!String.IsNullOrEmpty(content.LineByLineContent.ToString()))
                     {
-                        <div class="rich-text">
+                        <div class="rich-text mb-4">
                             @Html.Raw(content.LineByLineContent)
                         </div>
                     }
