--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
@@ -125,9 +125,12 @@ h6, .h6 {
 
 
 h1, h2, h3, h4, .display-1 {
-    &:not(.text-normal) {
-        text-transform: uppercase;
-        letter-spacing: 0.03rem;
+    text-transform: uppercase;
+    letter-spacing: 0.03rem;
+
+    &.text-normal {
+        text-transform: unset;
+        letter-spacing: 0rem;
     }
 }
 
