--- a/src/WRA.Umbraco.Web/Views/mywraEducation.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraEducation.cshtml
@@ -166,14 +166,14 @@
                 </div>
 
                 <!-- Misc Courses -->
-                <h3 class="h5 py-2 px-4">Lorem Courses</h3>
+                <h3 class="h5 py-2 px-4">Completed Courses</h3>
                 <div class="accordions-wrapper accordions-wrapper--border accordions-wrapper--border--light mb-5">
-                    @for (var i = 1; i < 5; i++)
+                    @foreach(var course in Model.CompletedCourses)
                     {
                         <details class="accordion accordion--light">
                             <summary class="accordion__toggle px-3">
                                 <div class="ps-1">
-                                    Lorem Ipsum Dolor
+                                    @course.CourseTitle
                                 </div>
                                 <div class="accordion__toggle-icon me-1">
                                     <i class="fas fa-chevron-down"></i>
@@ -182,20 +182,19 @@
 
                             </summary>
                             <div class="accordion__content px-4 text-body">
-                                @for (var c = 1; c < 5; c++)
-                                {
-                                    <div class="border border-medium p-4 rounded mb-3">
-                                        <h4 class="h6">
-                                            Pretium aenean pharetra magna
-                                        </h4>
-                                        <p class="fw-light">
-                                            Gain the power you need to strive with the WRA Mini Course Series.
-                                        </p>
-                                        <p>
-                                            You may access this course until 5/14/2024.
-                                        </p>
-                                    </div>
-                                }
+
+                                <div class="border border-medium p-4 rounded mb-3">
+                                    <h4 class="h6">
+                                        @course.CourseTitle
+                                    </h4>
+                                    <p class="fw-light">
+                                        @course.ProgramTitle
+                                    </p>
+                                    <p>
+                                        Completed on: @course.CompletionDate.Value.ToString("yyyy-MM-dd")
+                                    </p>
+                                </div>
+
                             </div>
                         </details>
                     }
