--- a/src/WRA.Umbraco.Web/Views/mywraEducation.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraEducation.cshtml
@@ -145,15 +145,15 @@
                                         @* </button> *@
                                         @if (requiredCourse.CourseProduct != null)
                                         {
-                                            <button class="border-0 bg-transparent px-2 py-2" title="Buy">
-                                                <i href="@requiredCourse.CourseProduct.Url()" class="far fa-shopping-cart text-primary fs-lg"></i>
-                                            </button>
+                                            <a href="@requiredCourse.CourseProduct.Url()" target="_blank" class="border-0 bg-transparent px-2 py-2" title="Buy">
+                                                <i class="far fa-shopping-cart text-primary fs-lg"></i>
+                                            </a>
                                         }
                                         @if (requiredCourse.CourseLauncherUrl != null)
                                         {
-                                            <button class="border-0 bg-transparent px-2 py-2" title="External Link">
-                                                <i href="@requiredCourse.CourseLauncherUrl" class="fa-regular fa-arrow-up-right-from-square text-primary fs-lg"></i>
-                                            </button>
+                                            <a href="@requiredCourse.CourseLauncherUrl" target="_blank" class="border-0 bg-transparent px-2 py-2" title="External Link">
+                                                <i class="fa-regular fa-arrow-up-right-from-square text-primary fs-lg"></i>
+                                            </a>
                                         }
                                     </td>
                                 </tr>
