--- a/src/WRA.Umbraco.Web/Views/NewsArticles.cshtml
+++ b/src/WRA.Umbraco.Web/Views/NewsArticles.cshtml
@@ -169,7 +169,7 @@
         <div id="article-results" class="js-article-results row my-4 mb-6 g-3 g-lg-6" style="min-height: 500px;" data-fallback="@newsCardFallbackImage?.GetCropUrl(width: 660, height: 330, furtherOptions: "&format=WebP")" data-cattotal="@totalPages">
             @foreach (var item in results.Take(pageSize))
             {
-                var articleTitle = item.HasProperty("title") ? item.Value("title") : item.Name;
+                var articleTitle = item.HasValue("title") ? item.Value("title") : item.Name;
                 var articleDateReadable = String.Format("{0:MMMM d, yyyy}", item.Value("date"));
                 var articleDate = String.Format("{0:yyyy-MM-dd}", item.Value("date"));
                 var articleCategory = item.Value<WRA.Umbraco.Models.ArticleCategory>("category");
