Deployment 9d7cbe89-f0ff-414a-b86e-982875ce59a7: Run number 998

--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/legalUpdateLibrary.cshtml
@@ -33,7 +33,10 @@
                 </select>
             }
 
-            <h2 class="h3 mt-3 mt-lg-5 mb-lg-0">Topics</h2>
+            <div class="d-lg-flex align-items-end justify-content-lg-between">
+                <h2 class="h3 mt-3 mt-lg-5 mb-lg-0">Topics</h2>
+                <button class="d-none d-lg-inline-block border-0 bg-transparent text-decoration-underline fs-sm text-primary js-legal-update-library-reset-topics" type="button">Reset</button>
+            </div>
 
             @* mobile topic filters *@
             <div class="d-lg-none">
