Deployment 82277f60-b6b4-4ea4-96d7-5962c65df64d: Run number 1000

--- a/src/WRA.Umbraco.Web/Views/Partials/_mywraHeader.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/_mywraHeader.cshtml
@@ -24,7 +24,7 @@
                         <div class="decorative-img-wrapper">
                             @if (!String.IsNullOrEmpty(member.ImageUrl))
                             {
-                                <img src="@member.ImageUrl" class="img-fluid fit-cover" width="150" height="150" alt="" />
+                                <img src="@member.ImageUrl" class="fit-cover" width="150" height="150" alt="" />
                             }
                             else
                             {
@@ -59,7 +59,7 @@
                         <div class="decorative-img-wrapper">
                             @if (!String.IsNullOrEmpty(member.ImageUrl))
                             {
-                                <img src="@member.ImageUrl" class="img-fluid fit-cover" width="150" height="150" alt="" />
+                                <img src="@member.ImageUrl" class="fit-cover" width="150" height="150" alt="" />
                             }
                             else
                             {
