Deployment 098ba7bc-b957-4912-ae20-4d3dda63a07e: Run number 1002

--- a/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
+++ b/src/WRA.Umbraco.Web/Views/mywraProfile.cshtml
@@ -26,6 +26,8 @@
 
 	var memberExternalId = member?.ExternalId;
 	var memberDonationQuery = content.MemberDonations;
+
+	var memberCommittees = content.MemberCommittees;
 }
 
 
